--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             colors: {
               clifford: '#da373d',
               'biker-primary': '#E76F51',
+              'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
             }
           }
         }
@@ -50,6 +51,49 @@
                 </div>
               </div>
         </nav>
+        <!-- banner -->
+        <section>
+          <div class="carousel w-full h-[550px] bg-bike-primary-bg">
+            <div id="slide1" class="carousel-item relative w-full">
+              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 items-center">
+                <div class="flex-1 p-24 lg:p-24  space-y-1 lg:space-y-5">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                    <p class="text-xs font-light">Amet minim mollit non deserunt ullamco 
+                      est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                      <button class="bg-biker-primary rounded-md h-16 w-[160px] font-semibold text-sm text-white">Purchase</button>
+                </div>
+                <div class="flex-1">
+                  <img src="images/slider/bike1.png" class=" mt-0 w-[220px] lg:w-[440px]" />
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+        </section>
     </header>
     <main>
 
