--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header class="md:container md:nax-auto">
         <nav>
-            <div class="navbar bg-base-100">
+            <div class="navbar bg-base-100 ">
                 <div class=" flex-1">
                   <div class="dropdown ">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -55,15 +55,15 @@
         <section>
           <div class="carousel w-full h-[550px] bg-bike-primary-bg">
             <div id="slide1" class="carousel-item relative w-full">
-              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 items-center">
-                <div class="flex-1 p-24 lg:p-24  space-y-1 lg:space-y-5">
+              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 lg:items-center">
+                <div class="flex-1 ml-20 mt-10 lg:p-24  space-y-1 lg:space-y-5">
                     <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
                     <p class="text-xs font-light">Amet minim mollit non deserunt ullamco 
                       est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                       <button class="bg-biker-primary rounded-md h-16 w-[160px] font-semibold text-sm text-white">Purchase</button>
                 </div>
                 <div class="flex-1">
-                  <img src="images/slider/bike1.png" class=" mt-0 w-[220px] lg:w-[440px]" />
+                  <img src="images/slider/bike1.png" class=" mt-6 ml-10 w-[220px] lg:w-[440px]" />
                 </div>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -72,21 +72,51 @@
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 items-center">
+                <div class="flex-1 ml-20 mt-10 lg:p-24  space-y-1 lg:space-y-5">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                    <p class="text-xs font-light">Amet minim mollit non deserunt ullamco 
+                      est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                      <button class="bg-biker-primary rounded-md h-16 w-[160px] font-semibold text-sm text-white">Purchase</button>
+                </div>
+                <div class="flex-1">
+                  <img src="images/slider/bike2.png" class=" mt-0 w-[220px] lg:w-[440px]" />
+                </div>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 items-center">
+                <div class="flex-1 ml-20 mt-10 lg:p-24  space-y-1 lg:space-y-5">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                    <p class="text-xs font-light">Amet minim mollit non deserunt ullamco 
+                      est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                      <button class="bg-biker-primary rounded-md h-16 w-[160px] font-semibold text-sm text-white">Purchase</button>
+                </div>
+                <div class="flex-1">
+                  <img src="images/slider/bike3.png" class=" mt-0 w-[220px] lg:w-[440px]" />
+                </div>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+              <div class="flex flex-col lg:flex-row gap-1 lg:gap-5 items-center">
+                <div class="flex-1 ml-20 mt-10 lg:p-24  space-y-1 lg:space-y-5">
+                    <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                    <p class="text-xs font-light">Amet minim mollit non deserunt ullamco 
+                      est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                      <button class="bg-biker-primary rounded-md h-16 w-[160px] font-semibold text-sm text-white">Purchase</button>
+                </div>
+                <div class="flex-1">
+                  <img src="images/slider/bike4.png" class=" mt-0 w-[220px] lg:w-[440px]" />
+                </div>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
@@ -96,7 +126,52 @@
         </section>
     </header>
     <main>
-
+      <section>
+        <div class="text-center mt-20">
+          <h1 class="text-5xl text-[#000] font-semibold">Fetured Bikes In This Year</h1>
+          <p class="text-sm text-[#E76F51] font-semibold">Best bike collection</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 ml-10 gap-5 lg:ml-28">
+          <img src="images/others/feature-bike.png" alt="">
+          <img src="images/others/feature-bike.png" alt="">
+          <img src="images/others/feature-bike.png" alt="">
+        </div>
+      </section>
+      <section class="mt-16 md:mt-20 lg:mt-28">
+        <h1 class=" text-xl lg:text-5xl text-center mb-10 md:mb-11 lg:mb-20">latest News</h1>
+        <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3">
+          <div class="card card-compact bg-base-100 shadow-xl">
+            <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title  text-xl lg:text-3xl lg:ml-16">Ducati XDIAVEL S-73</h2>
+              <p class="text-base lg:ml-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-biker-primary text-white lg:ml-16">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact  bg-base-100 shadow-xl">
+            <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl lg:ml-16">Ducati XDIAVEL S-73</h2>
+              <p class="text-base lg:ml-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-biker-primary text-white lg:ml-16">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact  bg-base-100 shadow-xl">
+            <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl lg:ml-16">Ducati XDIAVEL S-73</h2>
+              <p class="text-base lg:ml-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-biker-primary text-white lg:ml-16">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
 
