Happy Client Section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </section>
       <section class="mt-16 md:mt-20 lg:mt-28">
         <h1 class=" text-xl lg:text-5xl text-center mb-10 md:mb-11 lg:mb-20">latest News</h1>
-        <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3">
+        <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-5">
           <div class="card card-compact bg-base-100 shadow-xl">
             <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
             <div class="card-body">
@@ -167,6 +167,62 @@
               <p class="text-base lg:ml-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
               <div class="card-actions">
                 <button class="btn bg-biker-primary text-white lg:ml-16">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mt-28">
+        <h1 class="text-center text-5xl font-semibold mb-12">Happy <span class="text-biker-primary">Clients says</span></h1>
+        <div class="grid grid-cols-1   gap-16 md:grid-cols-2 lg:grid-cols-3 lg:mr-10 ">
+          <div class="card  bg-base-100 p-10 border-2 border-stone-400">
+            <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <p class="text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <div class="text-center">
+                <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">Regina Miles</h4>
+                <p class="text-sm font-semibold">Banker</p>
+              </div>
+            </div>
+          </div>
+          <div class="card  bg-base-100 p-10 border-2 border-stone-400">
+            <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <p class="text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <div class="text-center">
+                <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">Regina Miles</h4>
+                <p class="text-sm font-semibold">Banker</p>
+              </div>
+            </div>
+          </div>
+          <div class="card  bg-base-100 p-10 border-2 border-stone-400">
+            <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <p class="text-center">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <div class="text-center">
+                <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">Regina Miles</h4>
+                <p class="text-sm font-semibold">Banker</p>
               </div>
             </div>
           </div>
