--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </section>
       <section class="mt-28">
         <h1 class="text-center text-5xl font-semibold mb-12">Happy <span class="text-biker-primary">Clients says</span></h1>
-        <div class="grid grid-cols-1   gap-16 md:grid-cols-2 lg:grid-cols-3 lg:mr-10 ">
+        <div class="grid grid-cols-1   gap-16 md:grid-cols-2 lg:grid-cols-3 lg:px-5 ">
           <div class="card  bg-base-100 p-10 border-2 border-stone-400">
             <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
             <div class="card-body">
@@ -228,9 +228,57 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1 class="text-center text-5xl font-semibold mt-12 mb-12">Happy <span class="text-biker-primary">Clients says</span></h1>
+        <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 lg:px-40 items-center gap-4">
+          <div>
+            <img class=" w-80 h-3/4" src="images/others/faq.png" alt="">
+          </div>
+          <div>
+            <div class="collapse collapse-arrow ">
+              <input type="radio" name="my-accordion-2" checked="checked" /> 
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should know about riding a bike?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow ">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a new one?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow ">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-
+    <footer class="footer p-10 bg-neutral text-neutral-content">
+      <aside>
+        
+        <p>ACME Industries Ltd.<br>Providing reliable tech since 1992</p>
+      </aside> 
+      <nav class="text-right lg:ml-auto">
+        <h6 class="footer-title">Social</h6> 
+        <div class="grid gap-4">
+          <a><img src="images/others/android.png" alt=""></a>
+          <a><img src="images/others/ios.png" alt=""></a>
+          
+        </div>
+      </nav>
     </footer>
 </body>
 </html>
